--- a/reales/assets/css/style.css
+++ b/reales/assets/css/style.css
@@ -496,6 +496,12 @@ ol li, ul li { margin-bottom: 10px; }
     .carousel-h{
         height: 250px;
     }
+    .servicepadding{
+        padding: 0px;
+    }
+    .dtr-box-padding123{
+        margin-top: 20px;
+    }
 }
 /* padding for responsive hero section */
 @media (max-width: 992px) {
